# pandoc-sectionBreak

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/pandoc_sectionBreak/: docx_parse.py  main.py
tests/: test.md
