# Edit every `package-name`, `author-name` and other settings to match your project.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
authors = [
  {name = "AClon314", email = "aclon-e@qq.com"},
]
description = "Python package"
keywords = ["pandoc", "markdown", "docx", "pagebreak"]
license = {file = "LICENSE"}
name = "pandoc-sectionBreak"
readme = "README.md"
version = "0.1.0"

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
pandoc-sectionBreak = "pandoc_sectionBreak:app"

[project.urls]
Download = "http://github.com/AClon314/pandoc-sectionBreak/releases"
Homepage = "http://github.com/AClon314/pandoc-sectionBreak"
